--- a/index.html
+++ b/index.html
@@ -246,12 +246,18 @@
                                 <h1 class="skills__title">Generative AI</h1>
                                 <i class="uil uil-angle-down skills__arrow"></i>
                             </div>
-                            <div class="skills__list grid">
-                                <div class="skills__data">
+                                <div class="skills__list grid">
+                                    <div class="skills__data">
                                     <div class="skills__titles">
-                                        <p class="skills__name">OpenAI API</p>
+                                        <p class="skills__name">OpenAI Models</p>
                                     </div>
                                 </div>
+                                <div class="skills__list grid">
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <p class="skills__name">Open Source Models</p>
+                                        </div>
+                                    </div>
                                 <div class="skills__data">
                                     <div class="skills__titles">
                                         <p class="skills__name">LangChain</p>
@@ -259,7 +265,22 @@
                                 </div>
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <p class="skills__name">Prompt Chaining</p>
+                                        <p class="skills__name">LlamaIndex</p>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <p class="skills__name">Prompt Engineering</p>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <p class="skills__name">RAG</p>
+                                    </div>
+                                </div>
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <p class="skills__name">Finetuning</p>
                                     </div>
                                 </div>
                             </div>
