gen ai skills added

--- a/index.html
+++ b/index.html
@@ -306,8 +306,6 @@
                                 </div>
                             </div>
                         </div>
-                    
-                    </div>
 
 
                         <!-- Others -->
@@ -357,6 +355,24 @@
             <!--===== services =====-->
              <section class="work section" id="work">
                 <h2 class="section-title">Projects</h2>
+
+                <a href="https://github.com/usmanyaqoob49/Sakura-23">
+                    <div class="work__container bd-grid">
+                        <div class="work__img">
+                            <h2 style="text-align: center;">Sakura (FYP)</h2>
+                            <p>
+                           <br>
+                                Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep
+                                 Neural Networks.<br>
+                                Collected Data about different Exercises that can Enhance a particular emotion.
+                                <br>
+                                Made a Recommendation System for recommendation of the Exercises to do mood enhancement. 
+                                    <br>
+                                Deployed all these models/features on a Web App via Streamlit.
+                                </p>
+                        </div></a>
+
+
                 <a href="https://github.com/usmanyaqoob49/Sakura-23">
                 <div class="work__container bd-grid">
                     <div class="work__img">
