gen ai skills added

--- a/index.html
+++ b/index.html
@@ -356,21 +356,22 @@
              <section class="work section" id="work">
                 <h2 class="section-title">Projects</h2>
 
-                <a href="https://github.com/usmanyaqoob49/Sakura-23">
                     <div class="work__container bd-grid">
                         <div class="work__img">
-                            <h2 style="text-align: center;">Sakura (FYP)</h2>
+                            <h2 style="text-align: center;">
+                                Advance RAG using llama2, LangChain🦜️, Chromdb</h2>
                             <p>
                            <br>
-                                Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep
-                                 Neural Networks.<br>
-                                Collected Data about different Exercises that can Enhance a particular emotion.
+                                Made a advance RAG system using open source LLM and LangChain using following techniques:<br>
+                                - Get a hypothetical answer from LLM for query, combine both of them to get an accurate and closely related answers/documents from the vector database.                                
                                 <br>
-                                Made a Recommendation System for recommendation of the Exercises to do mood enhancement. 
-                                    <br>
-                                Deployed all these models/features on a Web App via Streamlit.
+                                - Generate the queries related to original query using LLM and then we can use these queries together to get more appropriate related documents from our vector database.
+                                <br>
+                                - Used Chromdb to get the related documents from the vector database.
+                                <br>
+                                - Using this technique we can score the retrieval of the documents according to the query that we have set. Basically Every document will have a score, that will show how much related it is to our query.
                                 </p>
-                        </div></a>
+                        </div>
 
 
                 <a href="https://github.com/usmanyaqoob49/Sakura-23">
