--- a/index.html
+++ b/index.html
@@ -352,86 +352,76 @@
                     </div>
                                             <br><br><br>
 
-            <!--===== services =====-->
-             <section class="work section" id="work">
-                <h2 class="section-title">Projects</h2>
-
+            <!--===== Project =====-->
+            <div class="work__container bd-grid">
+                <div class="work__img">
+                    <h2 style="text-align: center;">
+                        Advance RAG using llama2, LangChain🦜️, Chromdb</h2>
+                    <p>
+                        <br>
+                        Made a advance RAG system using open source LLM and LangChain using following techniques:<br>
+                        - Get a hypothetical answer from LLM for query, combine both of them to get an accurate and closely related answers/documents from the vector database.
+                        <br>
+                        - Generate the queries related to original query using LLM and then we can use these queries together to get more appropriate related documents from our vector database.
+                        <br>
+                        - Used Chromdb to get the related documents from the vector database.
+                        <br>
+                        - Using this technique we can score the retrieval of the documents according to the query that we have set. Basically Every document will have a score, that will show how much related it is to our query.
+                    </p>
+                </div>
+                <a href="https://github.com/usmanyaqoob49/Sakura-23">
                     <div class="work__container bd-grid">
                         <div class="work__img">
-                            <h2 style="text-align: center;">
-                                Advance RAG using llama2, LangChain🦜️, Chromdb</h2>
+                            <h2 style="text-align: center;">Sakura (FYP)</h2>
                             <p>
-                           <br>
-                                Made a advance RAG system using open source LLM and LangChain using following techniques:<br>
-                                - Get a hypothetical answer from LLM for query, combine both of them to get an accurate and closely related answers/documents from the vector database.                                
                                 <br>
-                                - Generate the queries related to original query using LLM and then we can use these queries together to get more appropriate related documents from our vector database.
+                                Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep
+                                Neural Networks.<br>
+                                Collected Data about different Exercises that can Enhance a particular emotion.
                                 <br>
-                                - Used Chromdb to get the related documents from the vector database.
+                                Made a Recommendation System for recommendation of the Exercises to do mood enhancement.
                                 <br>
-                                - Using this technique we can score the retrieval of the documents according to the query that we have set. Basically Every document will have a score, that will show how much related it is to our query.
-                                </p>
-                        </div>
-
-
-                <a href="https://github.com/usmanyaqoob49/Sakura-23">
-                <div class="work__container bd-grid">
-                    <div class="work__img">
-                        <h2 style="text-align: center;">Sakura (FYP)</h2>
-                        <p>
-                       <br>
-                            Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep
-                             Neural Networks.<br>
-                            Collected Data about different Exercises that can Enhance a particular emotion.
-                            <br>
-                            Made a Recommendation System for recommendation of the Exercises to do mood enhancement. 
-                                <br>
-                            Deployed all these models/features on a Web App via Streamlit.
+                                Deployed all these models/features on a Web App via Streamlit.
                             </p>
-                    </div></a>
-                    <a href="https://github.com/usmanyaqoob49/ScrapeInflateForecast">
-                        <div class="work__container bd-grid1">
-                            <div class="work__img">
-                                <h2 style="text-align: center;">ScrapeInflateForecast</h2>
-                                <p>
-                                    <br>
-                                    Used Beautiful Soap to Scrap the Latest Inflation Rate Data from the official Web Site.<br>
-                                    Performed detailed Time Series Analysis to know about Stationarity, Seasonality, Trend, AutoCorrelation, Partial AutoCorrelation and Distribution.<br>
-                                    Optimized ARIMA to Mean Square error of 2.88 and also Trained SARIMA and Facebook Prophet on the Data. <br>
-                                        <br>
-                                    </p>
-                            </div></div></a>
-
-
-                        <a href="https://github.com/usmanyaqoob49/Heart-Attack-Risk-Prediction-WebAPP">
-                            <div class="work__container bd-grid1">
-                                <div class="work__img">
-                                    <h2 style="text-align: center;">Heart Attack Risk Prediction Web Application</h2>
-                                    <p><br>
-                                        Made a Web Application using Dash.<br>
-                                        User can select the Machine Learning model and that specific model will be trained on the data and accuracy will be shown to user.
-                                        <br>
-                                        User can enter data of any person (features data) and selected model will do prediction on that and will return prediction to user.
-                                        </p>
-                                </div></div></a>
-
-
-
-                                        <a href="https://www.kaggle.com/code/usman49/detailed-eda-of-pakistansuicideattacks">
-                                            <div class="work__container bd-grid1">
-                                                <div class="work__img">
-                                                    <h2 style="text-align: center;">EDA of Pakistan Suicide Bombing Attacks Dataset</h2><br>
-                                                        <b>This Project has got Bronze Madel in Kaggle Notebooks.</b><br><br>
-                                                        In this project I did a detailed EDA on the Data set of Zeeshan Usmani which has Data about Suicide Bombing Attacks till 2017.
-                                            
-                                                        <br>
-                                                        Found Valueable Insights from EDA.
-                                                        </p>
-                                                </div></div></a>
-
-
-            </section>
-
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/usmanyaqoob49/ScrapeInflateForecast">
+                    <div class="work__container bd-grid1">
+                        <div class="work__img">
+                            <h2 style="text-align: center;">ScrapeInflateForecast</h2>
+                            <p>
+                                <br>
+                                Used Beautiful Soap to Scrap the Latest Inflation Rate Data from the official Web Site.<br>
+                                Performed detailed Time Series Analysis to know about Stationarity, Seasonality, Trend, AutoCorrelation, Partial AutoCorrelation and Distribution.<br>
+                                Optimized ARIMA to Mean Square error of 2.88 and also Trained SARIMA and Facebook Prophet on the Data. <br>
+                                <br>
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/usmanyaqoob49/Heart-Attack-Risk-Prediction-WebAPP">
+                    <div class="work__container bd-grid1">
+                        <div class="work__img">
+                            <h2 style="text-align: center;">Heart Attack Risk Prediction Web Application</h2>
+                            <p><br>
+                                Made a Web Application using Dash.<br>
+                                User can select the Machine Learning model and that specific model will be trained on the data and accuracy will be shown to user.
+                                <br>
+                                User can enter data of any person (features data) and selected model will do prediction on that and will return prediction to user.
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://www.kaggle.com/code/usman49/detailed-eda-of-pakistansuicideattacks">
+                    <div class="work__container bd-grid1">
+                        <div class="work__img">
+                            <h2 style="text-align: center;">EDA of Pakistan Suicide Bombing Attacks Dataset</h2><br>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            
             <!--===== CONTACT =====--> 
             <section class="contact section" id="experience">
                 <h2 class="section-title">Experience</h2>
