--- a/index.html
+++ b/index.html
@@ -363,6 +363,9 @@
                                             <br><br><br>
 
             <!--===== Project =====-->
+
+    <section class="project section" id="skills">
+                <h2 class="section-title">Projects</h2>
             <div class="work__container bd-grid">
                 <div class="work__img">
                     <h2 style="text-align: center;">
@@ -410,28 +413,10 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://github.com/usmanyaqoob49/Heart-Attack-Risk-Prediction-WebAPP">
-                    <div class="work__container bd-grid1">
-                        <div class="work__img">
-                            <h2 style="text-align: center;">Heart Attack Risk Prediction Web Application</h2>
-                            <p><br>
-                                Made a Web Application using Dash.<br>
-                                User can select the Machine Learning model and that specific model will be trained on the data and accuracy will be shown to user.
-                                <br>
-                                User can enter data of any person (features data) and selected model will do prediction on that and will return prediction to user.
-                            </p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://www.kaggle.com/code/usman49/detailed-eda-of-pakistansuicideattacks">
-                    <div class="work__container bd-grid1">
-                        <div class="work__img">
-                            <h2 style="text-align: center;">EDA of Pakistan Suicide Bombing Attacks Dataset</h2><br>
-                        </div>
-                    </div>
-                </a>
             </div>
-            
+        </section>
+
+
             <!--===== CONTACT =====--> 
             <section class="contact section" id="experience">
                 <h2 class="section-title">Experience</h2>
