--- a/index.html
+++ b/index.html
@@ -364,58 +364,50 @@
 
             <!--===== Project =====-->
 
-    <section class="project section" id="skills">
+            <section class="project section" id="skills">
                 <h2 class="section-title">Projects</h2>
-            <div class="work__container bd-grid">
-                <div class="work__img">
-                    <h2 style="text-align: center;">
-                        Advance RAG using llama2, LangChain🦜️, Chromdb</h2>
-                    <p>
-                        <br>
-                        Made a advance RAG system using open source LLM and LangChain using following techniques:<br>
-                        - Get a hypothetical answer from LLM for query, combine both of them to get an accurate and closely related answers/documents from the vector database.
-                        <br>
-                        - Generate the queries related to original query using LLM and then we can use these queries together to get more appropriate related documents from our vector database.
-                        <br>
-                        - Used Chromdb to get the related documents from the vector database.
-                        <br>
-                        - Using this technique we can score the retrieval of the documents according to the query that we have set. Basically Every document will have a score, that will show how much related it is to our query.
-                    </p>
+                <div class="project-container bd-grid">
+                    <div class="project-item">
+                        <h2 style="text-align: center;">
+                            Advance RAG using llama2, LangChain🦜️, Chromdb
+                        </h2>
+                        <p>
+                            <br>
+                            Made an advanced RAG system using open-source LLM and LangChain using the following techniques:<br>
+                            - Get a hypothetical answer from LLM for a query, combine both of them to get accurate and closely related answers/documents from the vector database.
+                            <br>
+                            - Generate queries related to the original query using LLM and then use these queries together to get more appropriate related documents from our vector database.
+                            <br>
+                            - Used Chromdb to get related documents from the vector database.
+                            <br>
+                            - Using this technique, we can score the retrieval of the documents according to the query that we have set. Basically, every document will have a score showing how much related it is to our query.
+                        </p>
+                    </div>
+                    <div class="project-item">
+                        <h2 style="text-align: center;">Sakura (FYP)</h2>
+                        <p>
+                            <br>
+                            Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep Neural Networks.<br>
+                            Collected data about different exercises that can enhance a particular emotion.
+                            <br>
+                            Made a recommendation system for recommending exercises for mood enhancement.
+                            <br>
+                            Deployed all these models/features on a web app via Streamlit.
+                        </p>
+                    </div>
+                    <div class="project-item">
+                        <h2 style="text-align: center;">ScrapeInflateForecast</h2>
+                        <p>
+                            <br>
+                            Used BeautifulSoup to scrape the latest inflation rate data from the official website.<br>
+                            Performed detailed time series analysis to understand stationarity, seasonality, trend, autocorrelation, partial autocorrelation, and distribution.<br>
+                            Optimized ARIMA to a mean square error of 2.88 and also trained SARIMA and Facebook Prophet on the data.
+                            <br>
+                        </p>
+                    </div>
                 </div>
-                <a href="https://github.com/usmanyaqoob49/Sakura-23">
-                    <div class="work__container bd-grid">
-                        <div class="work__img">
-                            <h2 style="text-align: center;">Sakura (FYP)</h2>
-                            <p>
-                                <br>
-                                Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep
-                                Neural Networks.<br>
-                                Collected Data about different Exercises that can Enhance a particular emotion.
-                                <br>
-                                Made a Recommendation System for recommendation of the Exercises to do mood enhancement.
-                                <br>
-                                Deployed all these models/features on a Web App via Streamlit.
-                            </p>
-                        </div>
-                    </div>
-                </a>
-                <a href="https://github.com/usmanyaqoob49/ScrapeInflateForecast">
-                    <div class="work__container bd-grid1">
-                        <div class="work__img">
-                            <h2 style="text-align: center;">ScrapeInflateForecast</h2>
-                            <p>
-                                <br>
-                                Used Beautiful Soap to Scrap the Latest Inflation Rate Data from the official Web Site.<br>
-                                Performed detailed Time Series Analysis to know about Stationarity, Seasonality, Trend, AutoCorrelation, Partial AutoCorrelation and Distribution.<br>
-                                Optimized ARIMA to Mean Square error of 2.88 and also Trained SARIMA and Facebook Prophet on the Data. <br>
-                                <br>
-                            </p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </section>
-
+            </section>
+            
 
             <!--===== CONTACT =====--> 
             <section class="contact section" id="experience">
