--- a/index.html
+++ b/index.html
@@ -387,24 +387,42 @@
                         <h2 style="text-align: center;">Sakura (FYP)</h2>
                         <p>
                             <br>
-                            Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep Neural Networks.<br>
-                            Collected data about different exercises that can enhance a particular emotion.
+                            - Trained a model with an accuracy of 96% for four emotions detection using BERT and Deep Neural Networks.<br>
+                            - Collected data about different exercises that can enhance a particular emotion.
                             <br>
-                            Made a recommendation system for recommending exercises for mood enhancement.
+                            - Made a recommendation system for recommending exercises for mood enhancement.
                             <br>
-                            Deployed all these models/features on a web app via Streamlit.
+                            - Deployed all these models/features on a web app via Streamlit.
                         </p>
                     </div>
+                    <br><br>
+
                     <div class="project-item">
                         <h2 style="text-align: center;">ScrapeInflateForecast</h2>
                         <p>
                             <br>
-                            Used BeautifulSoup to scrape the latest inflation rate data from the official website.<br>
-                            Performed detailed time series analysis to understand stationarity, seasonality, trend, autocorrelation, partial autocorrelation, and distribution.<br>
-                            Optimized ARIMA to a mean square error of 2.88 and also trained SARIMA and Facebook Prophet on the data.
+                            - Used BeautifulSoup to scrape the latest inflation rate data from the official website.<br>
+                            - Performed detailed time series analysis to understand stationarity, seasonality, trend, autocorrelation, partial autocorrelation, and distribution.<br>
+                            - Optimized ARIMA to a mean square error of 2.88 and also trained SARIMA and Facebook Prophet on the data.
                             <br>
                         </p>
                     </div>
+                    <br><br>
+                    <div class="project-item">
+                        <br><br>
+
+                    </div>
+                        <h2 style="text-align: center;">Human Face Detection and Recognition</h2>
+                        <p>
+                            <br>
+                            - MTCNN (Multi-Task Cascaded Convolutional Networks): I used MTCNN for face detection. MTCNN is adept at detecting faces in an image and providing bounding boxes around them.<br>
+                            - ResNet (Residual Network): This is often used for the task of feature extraction. In the context of facial recognition, you can use a pre-trained ResNet model to obtain facial encodings or embeddings. These encodings are numerical representations of the facial features that can be used for recognition.<br>
+                            - Euclidean Distance (L2 Norm): After all I used Euclidean distance metric to compare the embeddings of a newly detected face with images of authorized individuals stored in a designated folder. The set threshold was 0.7, indicating that if the similarity between the new person's face and any existing authorized image exceeded 70%, the individual would be granted authorization, and their name would be recorded accordingly.
+                            <br>
+                        </p>
+                    </div>
+
+
                 </div>
             </section>
             
