--- a/index.html
+++ b/index.html
@@ -383,6 +383,31 @@
                             - Using this technique, we can score the retrieval of the documents according to the query that we have set. Basically, every document will have a score showing how much related it is to our query.
                         </p>
                     </div>
+                    <br><br>
+
+                    <div class="project-item">
+
+
+                    </div>
+                        <h2 style="text-align: center;">
+                            Customized Meal Plan Automation for Restaurant
+                        </h2>
+                        <p>
+                            <br>
+                            - The plan was to automate the process of generating customized meal plans based on specific dietary requirements, such as calorie counts or dietary restrictions.
+                            <br>
+                            - Users can now interact with the system by requesting meal plans that fit their needs. For instance, they might ask for a meal plan that provides 400 calories, is vegetarian, or excludes gluten.
+
+                            <br>
+                            - To address this, we utilized Retrieval-Augmented Generation (RAG) system. By Ingesting menu cards in vector databases, and after that when user sends the query, It gets the relevant items from the menu and then we combined the retrieval with query and passed it LLM which is properly engineered w.r.t prompt. This setup allows to generate customized meal plans with items that were in menu. 
+
+                            <br>
+                            - The integration of LLM and RAG technology automates the creation of meal plans, providing users with personalized recommendations swiftly and accurately, enhancing the overall dining experience.
+                        </p>
+                    </div>
+                    <br><br>
+
+
                     <div class="project-item">
                         <h2 style="text-align: center;">Sakura (FYP)</h2>
                         <p>
