--- a/index.html
+++ b/index.html
@@ -443,19 +443,40 @@
                             <li>09/2023 - Present</li>
                         </ul>
 <br>
-                        <p>Key Responsibilities:</p>
-                        <ul>
-                            <li>-Contributed in end to end integrated system for US Company, by applying the Regression Algorithms for Prediction of
-                                Football Scores of the Team after Cleaning the Dirty Data from the API Provided.</li>
-                            <li>-Trained and finetuned Yolov8 and Yolov5 for the American Sign Language Detection(at MVP Stage) System for Sauidi Airpot Assistance,
-                                improving accuracy and FPS Lag. 
-                                </li>
-                                <li>-Trained and finetuned YoloV8 and Yolov5 for the American Sign Language Detection(at MVP Stage) system for Sauidi Airpot Assistance,
-                                    improving accuracy and FPS Lag. 
-                                    </li>
-                                <li>-Developed an End to End project using LangChain and OpenAI API to get Answers from the Document, uploaded by the User. </li>
-                                <li>-Contributed in Project for 'Urban E Recycling Company' by doing Data Cleaning and Analysis for the Valuable Insights</li>
-                                </ul>
+                <p>A. Cryptocurrency Trading Bot Development:</p>
+                <ul>
+                <li>- Trained models (XGBoost, Random Forest, Decision Tree) for forecasting Ethereum's closing value over the next 4 hours by using historical Ethereum data and market fear and greed data to enhance prediction accuracy. Selected the XGBoost model for the final implementation due to its lowest RMSE (Root Mean Squared Error) loss.</li>
+                <li>- Developed a Random Forest model to predict the best APR (Annual Percentage Rate) by analyzing other protocols' APRs, coin-specific APRs, and news sentiment extracted from cryptocurrency news data.</li>
+                <li>- Created a prediction pipeline that extracts real-time coin APR data, protocol APR data, news sentiment data, and market fear and greed data. The pipeline predicts APR based on the amount, duration, and token specified by the user.</li>
+                </ul>
+                <br><br>
+
+                <p>B. Riyadh's Different Places Reviews Sentiment Analysis and Analytics:</p>
+                <ul>
+                <li>- Analyzed 2.1 million reviews of different places in Riyadh to extract sentiments from the reviews and identify specific aspects being discussed. Determined whether the sentiment was positive or negative, helping to understand what people liked or disliked about various aspects. Achieved 50% cost savings by utilizing the OpenAI GPT-4 batch API for sentiment extraction.</li>
+                <li>- Conducted detailed analysis on the results to provide actionable insights. Identified top aspects that people liked about popular places and pinpointed negative aspects that needed improvement. This information was aimed at helping place owners understand and address specific issues.</li>
+                </ul>
+                <br><br>
+
+                <p>C. Airport Guidance for Disable People (MVP):</p>
+                <ul>
+                    <li>
+                        - Trained and finetuned Yolov8 and Yolov5 models for the American Sign Language Detection System for Saudi Airport Assistance, ensuring the high accuracy of detection by collecting the real world data and hand labelling the data.
+                    </li>
+                    <li>
+                        - Developed a system that can detect the American Sign Language and convert it into the text for the guidance of disable people in the airport.
+
+                    </li>
+                    <li>
+                        - The chatbot was developed to answer those queries of the disable people.
+
+                    </li>
+                <br><br>
+                </ul>
+                <p>D. Document QNA System</p>
+                <ul>                <li>- Developed an End to End project using LangChain and OpenAI API to get Answers from the Document, uploaded by the User. </li>
+                </ul>
+                               
                 </section>
                 </div>
                 <br><br>
