removed project section

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                             <br><br><br>
 
             <!--===== Project =====-->
-            <section class="project section" id="skills">
+            <!-- <section class="project section" id="skills">
                 <h2 class="section-title">Projects</h2>
                 <div class="project-container bd-grid">
                     <div class="project-item">
@@ -428,7 +428,7 @@
                     </div>
                 </div>
             </section>
-            
+             -->
             
 
             <!--===== CONTACT =====--> 
