Education added in Navbar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                        <li class="nav__item"><a href="#education" class="nav__link">Education</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#experience" class="nav__link"></a>Experience</li>
@@ -72,7 +73,7 @@
             
             <!-- <br><br><br>  -->
 
-            <section class="about section " id="about">
+            <section class="education section " id="education">
                 <h2 class="section-title">Education</h2>
             
                 <div class="about__container bd-grid">
