Education added in Navbar

--- a/index.html
+++ b/index.html
@@ -448,6 +448,8 @@
                             <li><strong>Associate Data Scientist</strong></li>
                             <li>TenX</li>
                             <li>06/2025 - Present</li>
+                            <strong><li>My Contributions:</li></strong>
+
                         </ul>
                         <ul>
                             <li>- Working on building Strategic Agentic Systems for one of Top 4 Companies.</li>
@@ -462,15 +464,15 @@
             <li><strong>Artificial Intelligence Engineer</strong></li>
             <li>JMM TECHNOLOGY</li>
             <li>09/2023 - 06/2025</li>
+            <strong><li>My Contributions:</li></strong>
         </ul>
-        <h4>Projects and My Contributions</h4>
         <p>A. Cryptocurrency Trading Bot Development:</p>
         <ul>
             <li>- Trained models (XGBoost, Random Forest, Decision Tree) for forecasting Ethereum's closing value over the next 4 hours using historical Ethereum data and market fear & greed data. Selected XGBoost due to lowest RMSE.</li>
             <li>- Developed a Random Forest model to predict the best APR by analyzing protocol APRs, coin-specific APRs, and news sentiment from cryptocurrency news data.</li>
             <li>- Created a real-time prediction pipeline that extracts coin APR data, protocol APR data, news sentiment, and market fear & greed data to forecast APRs based on user input (amount, duration, token).</li>
         </ul>
-        <br><br>
+        <br>
 
         <p>B. Riyadh's Different Places Reviews Sentiment Analysis and Analytics:</p>
         <ul>
@@ -478,7 +480,7 @@
             <li>- Achieved 50% cost savings by using OpenAI GPT-4 batch API for sentiment extraction.</li>
             <li>- Delivered actionable insights by identifying top liked aspects and negative pain points for place owners to improve services.</li>
         </ul>
-        <br><br>
+        <br>
 
         <p>C. Airport Guidance for Disabled People (MVP):</p>
         <ul>
@@ -486,7 +488,7 @@
             <li>- Built a system that detects ASL and converts it into text for real-time guidance.</li>
             <li>- Developed a chatbot to answer common queries of disabled passengers.</li>
         </ul>
-        <br><br>
+        <br>
 
         <p>E. ProofLingo:</p>
         <ul>
@@ -494,14 +496,14 @@
             <li>- Collaborated on backend development in Django.</li>
             <li>- Deployed the backend on AWS LightSail using Docker for scalability.</li>
         </ul>
-        <br><br>
+        <br>
 
         <p>F. HRM:</p>
         <ul>
             <li>- Developed an employee facial recognition system for an HRM mobile app to automate login and attendance, deployed on Alibaba Cloud.</li>
             <li>- Built an AI Resume Scoring system to automate initial resume screening, significantly reducing manual review time.</li>
         </ul>
-        <br><br>
+        <br>
 
         <p>G. College Football Prediction:</p>
         <ul>
@@ -509,8 +511,7 @@
             <li>- Trained ML models and built a real-time system allowing clients to update BigQuery data and retrain models dynamically.</li>
             <li>- Implemented a CI/CD pipeline with Google Cloud Run, connected to Git for auto-build and redeployment on each push.</li>
         </ul>
-        <br><br>
-
+        <br>
         <p>H. Hysabat Business Advisor:</p>
         <ul>
             <li>- Designed and implemented an agentic workflow on a database with 300+ interconnected tables to enable natural language sales insights and automated report generation.</li>
@@ -526,9 +527,8 @@
                             <li><strong>Machine Learning Engineer (Internship)</strong> </li>
                             <li>LAB-D TECH LTD</li>
                             <li>07/2023 - 08/2023</li>
+                            <strong><li>My Contributions:</li></strong>
                         </ul>
-                        <br>
-                        <h4>Key Responsibilities:</h4>
                         <ul>
                             <li>-Developed and Optimized Human Face Recognition System for a School by Using MTCNN and RESNET, that can Recognize Authorize Person and Send Request to Admin whenever Unauthorized Person is recognized to make him Authorized by Entering Name.</li>
                             <li>-Optimized the Overall Recognition System by Imporving the Accuracy of Recognition and FPS Lag.</li>
